clean up BOT reasonging examples

--- a/Java Notebooks/BOT_reasoning.ipynb
+++ b/Java Notebooks/BOT_reasoning.ipynb
@@ -6,7 +6,8 @@
    "source": [
     "# Jena Reasoning on a simple BOT instance\n",
     "\n",
-    "In order to run Jena using the IJava kernel on Jupyter notebooks, first we need to use some [IJava Magics](https://github.com/SpencerPark/IJava/blob/7f5aa9ab858859a010fd228364b080606399ae60/docs/magics.md#line-magic-2) to load it:"
+    "In order to run Jena using the IJava kernel on Jupyter notebooks, first we need to use some [IJava Magics](https://github.com/SpencerPark/IJava/blob/7f5aa9ab858859a010fd228364b080606399ae60/docs/magics.md#line-magic-2) to load it:\n",
+    "\n"
    ]
   },
   {
@@ -21,15 +22,8 @@
     "    <artifactId>apache-jena-libs</artifactId>\n",
     "    <type>pom</type>\n",
     "    <version>3.11.0</version>\n",
-    "</dependency>"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "</dependency>\n",
+    "\n",
     "%%loadFromPOM\n",
     "<dependencies>\n",
     "  <dependency>\n",
@@ -56,23 +50,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<br>\n",
-    "Let's create a Jena model object and load the BOT ontology into it.<br>\n",
-    "If SLF4J throws a warning, ignore it."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Setting up Jena Reasoning on a simple BOT instance\n",
+    "### Setting up Jena \n",
     "\n",
     "first, lets import all the Classes we will need for reasoning"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
