--- a/Notebooks/Index.ipynb
+++ b/Notebooks/Index.ipynb
@@ -34,7 +34,8 @@
     "## Chapter 3 - Lecture Notes and Tutorials\n",
     "\n",
     "* [03-00 Geo BIM Tutorial](03-00-geo-bim-tutorial.ipynb)  \n",
-    "* [03-01 Introduction to Node-Red](03-01-Node-Red-Tutorial.ipynb)  "
+    "* [03-01 Introduction to Node-Red](03-01-Node-Red-Tutorial.ipynb)  \n",
+    "* [03-02 Introduction to Linked Data and Semantic Web: The Basics](03-02-Intro-LD-and-SWT.ipynb)  \n"
    ]
   },
   {
