--- a/Notebooks/03-00-geo-bim-tutorial.ipynb
+++ b/Notebooks/03-00-geo-bim-tutorial.ipynb
@@ -27,7 +27,7 @@
 				"\n",
 				"The code you are going to use in this tutorial is still in development, and as such has only been tested on a small range of IFC Models which can be found [here](http://smartlab1.elis.ugent.be:8889/IFC-repo/) and which are named in Table 1. The previous site also provides a method for converting IFC step files into RDF, the source code of which is available here:\n",
 				"\n",
-				"**Table 1:** Six ifcOWL files downloaded from [here](http://smartlab1.elis.ugent.be:8889/IFC-repo/)\n",
+				"**Table 1:** Six ifcOWL files which can be found here [here](https://www.scss.tcd.ie/~mcglink/workshop/ldac2019/)\n",
 				"\n",
 				"| File Name | RF Triple Count | Wall Count | Building Storey Count |\n",
 				"|:-|:-|:-|:-|\n",
