--- a/Notebooks/03-00-geo-bim-tutorial.ipynb
+++ b/Notebooks/03-00-geo-bim-tutorial.ipynb
@@ -75,7 +75,7 @@
 			"cell_type": "markdown",
 			"metadata": {},
 			"source": [
-				"## STEP 3 SETTING UP THE TRIPLESTORE AND SPARQL \n",
+				"## STEP 3 SETTING UP THE TRIPLESTORE AND GEOSPARQL \n",
 				"\n",
 				"Setting up a triplestore and SPARQL endpoint is straightforward. Several suites exist which support GeoSPARQL:\n",
 				"\n",
@@ -104,7 +104,7 @@
 				"\n",
 				"> SET PATH=%PATH%;C:\\stardog-6.2.1\\bin\n",
 				"\n",
-				"You must also make sure you have a JDK installed. For Stardog 6.2.1 I used the latest jdk downloaded from [here](https://www.oracle.com/technetwork/java/javase/downloads/jdk8-downloads-2133151.html)\n",
+				"You must also make sure you have a JDK installed. For Stardog 6.2.1 I used the latest JDK downloaded from [here](https://www.oracle.com/technetwork/java/javase/downloads/jdk8-downloads-2133151.html)\n",
 				"\n",
 				"Before you start your server there are still a few more hoops to jump through. First you will need to create a stardog.properties file and save it into folder data/stardog. You can find the properties file [here](https://github.com/stardog-union/stardog-examples/blob/develop/config/stardog.properties)\n",
 				"\n",
