Added 03-03 module by Mads

--- a/Notebooks/Index.ipynb
+++ b/Notebooks/Index.ipynb
@@ -35,7 +35,9 @@
     "\n",
     "* [03-00 Geo BIM Tutorial](03-00-geo-bim-tutorial.ipynb)  \n",
     "* [03-01 Introduction to Node-Red](03-01-Node-Red-Tutorial.ipynb)  \n",
-    "* [03-02 Introduction to Linked Data and Semantic Web: The Basics](03-02-Intro-LD-and-SWT.ipynb)  \n"
+    "* [03-02 Introduction to Linked Data and Semantic Web: The Basics](03-02-Intro-LD-and-SWT.ipynb)  \n",
+    "* [03-03 Introduction to querying Linked Data](03-03-Introduction-to-querying-Linked-Data.ipynb)  \n",
+    "\n"
    ]
   },
   {
