--- a/Notebooks/03-00-geo-bim-tutorial.ipynb
+++ b/Notebooks/03-00-geo-bim-tutorial.ipynb
@@ -66,7 +66,7 @@
 				"\n",
 				"> java -jar IfcOwl2IfcOwlGeoloc-1.0-SNAPSHOT.jar “test_file.ttl” \n",
 				"\n",
-				"This should generate two files: a “test_file_ ifc_geo.ttl” and “test_file_ ifc_bot.ttl” in a folder called “output”.\n",
+				"This should generate two files: a “test_file_geoloc.ttl” and “test_file_bot_geo.ttl” in a folder called “output”.\n",
 				"\n",
 				"You can now open the outputs in any text editor. Look for the properties “hasGeometry” to find the resulting geometry, and “asWKT” the wkt literals associated with ifc and bot individuals.  Next you will set up a triplestore which is geoSPARQL enabled and begin writing some GeoSPARQL queries. \n"
 			]
