update of hello jena example

--- a/Java Notebooks/BOT_reasoning.ipynb
+++ b/Java Notebooks/BOT_reasoning.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,8 +22,15 @@
     "    <artifactId>apache-jena-libs</artifactId>\n",
     "    <type>pom</type>\n",
     "    <version>3.11.0</version>\n",
-    "</dependency>\n",
-    "\n",
+    "</dependency>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "%%loadFromPOM\n",
     "<dependencies>\n",
     "  <dependency>\n",
@@ -57,14 +64,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import org.apache.jena.rdf.model.Model;\n",
-    "import org.apache.jena.rdf.model.ModelFactory;\n",
-    "import org.apache.jena.util.FileManager;\n",
-    "import org.apache.jena.ontology.OntModel;\n",
     "import org.apache.jena.reasoner.*;\n",
     "import org.apache.jena.rdf.model.InfModel;\n",
     "import org.apache.jena.rdf.model.Statement;\n",
@@ -73,7 +76,7 @@
     "import org.apache.jena.ontology.*;\n",
     "import org.apache.jena.vocabulary.OWL ;\n",
     "import org.apache.jena.vocabulary.RDF ;\n",
-    "import org.apache.jena.vocabulary.RDFS ;"
+    "import org.apache.jena.vocabulary.RDFS;"
    ]
   },
   {
@@ -104,9 +107,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/***************** facts BEFORE inference ****************/\n",
+      "(<https://ldac.org/house#BuildingA> <https://w3id.org/bot#hasStorey> <https://ldac.org/house#Storey01>)\n",
+      "(<https://ldac.org/house#BuildingA> <https://w3id.org/bot#hasStorey> <https://ldac.org/house#Storey00>)\n"
+     ]
+    }
+   ],
    "source": [
     "// load a simple instance file from the example az\n",
     "// https://w3c-lbd-cg.github.io/bot/?tab=0#two-storey-building\n",
@@ -134,9 +147,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "/***************** facts AFTER inference ****************/\n",
+      "(<https://ldac.org/house#BuildingA> <https://w3id.org/bot#hasStorey> <https://ldac.org/house#Storey01>)\n",
+      "(<https://ldac.org/house#BuildingA> <https://w3id.org/bot#hasStorey> <https://ldac.org/house#Storey00>)\n",
+      "(<https://ldac.org/house#BuildingA> rdf:type owl:Thing)\n",
+      "(<https://ldac.org/house#BuildingA> rdf:type <https://w3id.org/bot#Building>)\n",
+      "(<https://ldac.org/house#BuildingA> <https://w3id.org/bot#containsZone> <https://ldac.org/house#Storey01>)\n",
+      "(<https://ldac.org/house#BuildingA> <https://w3id.org/bot#containsZone> <https://ldac.org/house#Storey00>)\n",
+      "(<https://ldac.org/house#BuildingA> rdf:type <https://w3id.org/bot#Zone>)\n",
+      "(<https://ldac.org/house#BuildingA> rdf:type rdfs:Resource)\n",
+      "(<https://ldac.org/house#BuildingA> <https://w3id.org/bot#containsZone> <https://ldac.org/house#SpaceD>)\n",
+      "(<https://ldac.org/house#BuildingA> <https://w3id.org/bot#containsZone> <https://ldac.org/house#SpaceC>)\n",
+      "(<https://ldac.org/house#BuildingA> <https://w3id.org/bot#containsZone> <https://ldac.org/house#SpaceB>)\n",
+      "(<https://ldac.org/house#BuildingA> <https://w3id.org/bot#containsZone> <https://ldac.org/house#SpaceA>)\n",
+      "(<https://ldac.org/house#BuildingA> owl:sameAs <https://ldac.org/house#BuildingA>)\n",
+      "(<https://ldac.org/house#BuildingA> owl:differentFrom <https://ldac.org/house#SpaceD>)\n",
+      "(<https://ldac.org/house#BuildingA> owl:differentFrom <https://ldac.org/house#SpaceC>)\n",
+      "(<https://ldac.org/house#BuildingA> owl:differentFrom <https://ldac.org/house#SpaceB>)\n",
+      "(<https://ldac.org/house#BuildingA> owl:differentFrom <https://ldac.org/house#SpaceA>)\n",
+      "(<https://ldac.org/house#BuildingA> owl:differentFrom <https://ldac.org/house#Storey01>)\n",
+      "(<https://ldac.org/house#BuildingA> owl:differentFrom <https://ldac.org/house#Storey00>)\n",
+      "(<https://ldac.org/house#BuildingA> owl:differentFrom <https://ldac.org/house#SiteA>)\n"
+     ]
+    }
+   ],
    "source": [
     "// import the BOT Ontology from the source via HTTP\n",
     "/****** the T-BOX *************/\n",
@@ -199,9 +242,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(<https://ldac.org/house#Storey00> <https://ldac.org/connection#isConnectedTo> <https://ldac.org/house#SpaceA>)\n",
+      "(<https://ldac.org/house#Storey00> <https://w3id.org/bot#hasSpace> <https://ldac.org/house#SpaceB>)\n",
+      "(<https://ldac.org/house#Storey00> <https://w3id.org/bot#hasSpace> <https://ldac.org/house#SpaceA>)\n",
+      "(<https://ldac.org/house#Storey00> rdf:type <https://w3id.org/bot#Storey>)\n",
+      "(<https://ldac.org/house#Storey00> rdf:type owl:Thing)\n",
+      "(<https://ldac.org/house#Storey00> <https://w3id.org/bot#containsZone> <https://ldac.org/house#SpaceB>)\n",
+      "(<https://ldac.org/house#Storey00> <https://w3id.org/bot#containsZone> <https://ldac.org/house#SpaceA>)\n",
+      "(<https://ldac.org/house#Storey00> rdf:type <https://w3id.org/bot#Zone>)\n",
+      "(<https://ldac.org/house#Storey00> <https://ldac.org/connection#isConnectedTo> <https://ldac.org/house#SpaceB>)\n",
+      "(<https://ldac.org/house#Storey00> <https://ldac.org/connection#isConnectedTo> <https://ldac.org/house#SpaceC>)\n",
+      "(<https://ldac.org/house#Storey00> <https://ldac.org/connection#isConnectedTo> <https://ldac.org/house#Storey00>)\n",
+      "(<https://ldac.org/house#Storey00> rdf:type rdfs:Resource)\n",
+      "(<https://ldac.org/house#Storey00> owl:sameAs <https://ldac.org/house#Storey00>)\n",
+      "(<https://ldac.org/house#Storey00> owl:differentFrom <https://ldac.org/house#SiteA>)\n",
+      "(<https://ldac.org/house#Storey00> owl:differentFrom <https://ldac.org/house#BuildingA>)\n",
+      "(<https://ldac.org/house#Storey00> owl:differentFrom <https://ldac.org/house#SpaceD>)\n",
+      "(<https://ldac.org/house#Storey00> owl:differentFrom <https://ldac.org/house#SpaceC>)\n",
+      "(<https://ldac.org/house#Storey00> owl:differentFrom <https://ldac.org/house#SpaceB>)\n",
+      "(<https://ldac.org/house#Storey00> owl:differentFrom <https://ldac.org/house#SpaceA>)\n"
+     ]
+    }
+   ],
    "source": [
     "Model conn = FileManager.get().loadModel(\"../data/conn.ttl\");\n",
     "bot.add(conn);\n",
