--- a/Notebooks/00-00-Check-Python-Setup.ipynb
+++ b/Notebooks/00-00-Check-Python-Setup.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -30,10 +30,10 @@
     {
      "data": {
       "text/plain": [
-       "'3.7.3 | packaged by conda-forge | (default, Mar 27 2019, 23:01:00) \\n[GCC 7.3.0]'"
+       "'3.7.3 (default, Mar 27 2019, 17:13:21) [MSC v.1915 64 bit (AMD64)]'"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -66,21 +66,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'xlrd'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-2-2743bb67f6dd>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mxlrd\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'xlrd'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import xlrd"
    ]
@@ -96,9 +84,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'rdflib'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-1-7898afa8b071>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mimport\u001b[0m \u001b[0mrdflib\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'rdflib'"
+     ]
+    }
+   ],
    "source": [
     "import rdflib"
    ]
@@ -112,43 +112,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Collecting package metadata: done\n",
-      "Solving environment: done\n",
+      "WARNING: The conda.compat module is deprecated and will be removed in a future release.\n",
       "\n",
-      "## Package Plan ##\n",
-      "\n",
-      "  environment location: /srv/conda/envs/notebook\n",
-      "\n",
-      "  added / updated specs:\n",
-      "    - xlrd\n",
-      "\n",
-      "\n",
-      "The following packages will be downloaded:\n",
-      "\n",
-      "    package                    |            build\n",
-      "    ---------------------------|-----------------\n",
-      "    xlrd-1.2.0                 |             py_0         108 KB  conda-forge\n",
-      "    ------------------------------------------------------------\n",
-      "                                           Total:         108 KB\n",
-      "\n",
-      "The following NEW packages will be INSTALLED:\n",
-      "\n",
-      "  xlrd               conda-forge/noarch::xlrd-1.2.0-py_0\n",
-      "\n",
-      "\n",
-      "\n",
-      "Downloading and Extracting Packages\n",
-      "xlrd-1.2.0           | 108 KB    | ##################################### | 100% \n",
-      "Preparing transaction: done\n",
-      "Verifying transaction: done\n",
-      "Executing transaction: done\n"
+      "CondaValueError: invalid package specification: #\n",
+      "\n"
      ]
     }
    ],
@@ -169,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -182,10 +156,10 @@
     {
      "data": {
       "text/plain": [
-       "'/home/jovyan/Notebooks'"
+       "'C:\\\\jdrive\\\\src\\\\2019_ldac_summer_school\\\\SummerSchoolOfLDAC\\\\Notebooks'"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -198,10 +172,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting rdflib\n",
+      "  Using cached https://files.pythonhosted.org/packages/3c/fe/630bacb652680f6d481b9febbb3e2c3869194a1a5fc3401a4a41195a2f8f/rdflib-4.2.2-py3-none-any.whl\n",
+      "Collecting isodate (from rdflib)\n",
+      "  Using cached https://files.pythonhosted.org/packages/9b/9f/b36f7774ff5ea8e428fdcfc4bb332c39ee5b9362ddd3d40d9516a55221b2/isodate-0.6.0-py2.py3-none-any.whl\n",
+      "Requirement already satisfied: pyparsing in d:\\bin\\dev\\anaconda3\\lib\\site-packages (from rdflib) (2.3.1)\n",
+      "Requirement already satisfied: six in d:\\bin\\dev\\anaconda3\\lib\\site-packages (from isodate->rdflib) (1.12.0)\n",
+      "Installing collected packages: isodate, rdflib\n",
+      "Successfully installed isodate-0.6.0 rdflib-4.2.2\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install rdflib\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting SPARQLWrapper\n",
+      "  Downloading https://files.pythonhosted.org/packages/b0/1d/d7c60a451a255fca655fe37eb3f6e3b3daa7d33fc87eeec0d8631d501e76/SPARQLWrapper-1.8.4-py3-none-any.whl\n",
+      "Requirement already satisfied: rdflib>=4.0 in d:\\bin\\dev\\anaconda3\\lib\\site-packages (from SPARQLWrapper) (4.2.2)\n",
+      "Requirement already satisfied: pyparsing in d:\\bin\\dev\\anaconda3\\lib\\site-packages (from rdflib>=4.0->SPARQLWrapper) (2.3.1)\n",
+      "Requirement already satisfied: isodate in d:\\bin\\dev\\anaconda3\\lib\\site-packages (from rdflib>=4.0->SPARQLWrapper) (0.6.0)\n",
+      "Requirement already satisfied: six in d:\\bin\\dev\\anaconda3\\lib\\site-packages (from isodate->rdflib>=4.0->SPARQLWrapper) (1.12.0)\n",
+      "Installing collected packages: SPARQLWrapper\n",
+      "Successfully installed SPARQLWrapper-1.8.4\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install SPARQLWrapper\n"
+   ]
   }
  ],
  "metadata": {
